# icecream

./: .gitignore  .travis.yml  CMakeLists.txt  README  cmake-config.h.in  configure.ac
Modules/: CMakeMacroLibtoolFile.cmake  CheckDIRSymbolExists.cmake  CheckPrototypeExists.cmake  CheckSTDC.cmake  CheckStructMember.cmake  DocbookToManUtils.cmake  FindDl.cmake  FindDocbookToMan.cmake  FindLibcap-ng.cmake  FindZstd.cmake  install_symlink.cmake
client/: CMakeLists.txt  arg.cpp  argv.c  client.h  cpp.cpp  local.cpp  main.cpp  remote.cpp  util.cpp  util.h
compilerwrapper/: CMakeLists.txt  compilerwrapper.cpp
daemon/: CMakeLists.txt  environment.cpp  environment.h  file_util.cpp  load.cpp  main.cpp  serve.cpp  workit.cpp
doc/: CMakeLists.txt
scheduler/: CMakeLists.txt  scheduler.cpp
services/: CMakeLists.txt  comm.cpp  comm.h  exitcode.cpp  getifaddrs.cpp  getifaddrs.h  logging.cpp  logging.h  ncpus.c  pipes.cpp  pipes.h  platform.cpp  socketwrapper.cpp  socketwrapper.h  tempfile.c  util.cpp  util.h
suse/: CMakeLists.txt
tests/: CMakeLists.txt
unittests/: CMakeLists.txt
